--- a/playground/index.html
+++ b/playground/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Power BI visualization playground</title>
@@ -16,6 +16,7 @@
     </div>  
     
     <div id="container">
+        <div id="optionsContainer"></div>
         <div id="itemContainer"></div>
     </div>
 
