Add PIXI and TwoJS renderers. Add timing data. Don't do data conversion on resize.

--- a/src/Clients/PowerBIVisualsPlayground/index.html
+++ b/src/Clients/PowerBIVisualsPlayground/index.html
@@ -33,6 +33,7 @@
                 <input type="checkbox" name="is_interactions" value="">
             </li>
         </ul>
+        <div class="timing"></div>
     </section>
     <section id="sample">
         <div class="topBar">
@@ -40,6 +41,16 @@
                 <div>
                     <span>Select a visual:</span>
                     <select id="visualTypes"></select>
+                </div>
+                <div>
+                    <span>Renderer:</span>
+                    <select id="rendererSelect">
+                        <option>SVG</option>
+                        <option>Canvas</option>
+                        <option>WebGL</option>
+                        <option>TwoJS</option>
+                        <option>PIXI</option>
+                    </select>
                 </div>
             </div>
         </div>
