updates PowerBIVisualsPlayground on the live page (#442)

--- a/playground/index.html
+++ b/playground/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <title>Power BI visualization playground</title>
-    <link rel="stylesheet" href="styles/app.css" />
-    <link rel="stylesheet" href="styles/visuals.css" />
-    <link rel="stylesheet" href="styles/customVisuals.css" />
+    <link rel="stylesheet" href="lib/PowerBIVisualsPlayground.css" />
+    <link rel="stylesheet" href="lib/Visuals.css" />
+    <link rel="stylesheet" href="lib/CustomVisuals.css" />
 
-    <script type="text/javascript" src="obj/powerbi-visuals.all.js"></script>
-    <script type="text/javascript" src="obj/CustomVisuals.js"></script>
-    <script type="text/javascript" src="obj/PowerBIVisualsPlayground.js"></script>
+    <script type="text/javascript" src="lib/powerbi-visuals-externals.min.js"></script>
+    <script type="text/javascript" src="lib/powerbi-visuals.js"></script>
+    <script type="text/javascript" src="lib/CustomVisuals.js"></script>
+    <script type="text/javascript" src="lib/PowerBIVisualsPlayground.js"></script>
 
 </head>
 <body>
